--- a/static_resources/index.html
+++ b/static_resources/index.html
@@ -35,6 +35,6 @@
         </div>
     </div>
 
-    <script src="app.js" type="text/javascript"></script>
+    <script type="module" src="app.js" type="text/javascript"></script>
 </body>
 </html>
