Started working on the move generation.

--- a/static_resources/index.html
+++ b/static_resources/index.html
@@ -31,6 +31,13 @@
 
             <div class="move-list-container">
                 <div id="moveList" class="move-list"></div>
+                <div class="movegen-container">
+                    <label for="movegenSelect">Move Generator:</label>
+                    <div class="movegen-controls">
+                        <select id="movegenSelect"></select>
+                        <button id="getMoveBtn">Get</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
