Fix some bugs with move generation and the javascript displaying.

--- a/static_resources/index.html
+++ b/static_resources/index.html
@@ -29,8 +29,10 @@
                 <button id="resetBtn">Reset</button>
             </div>
 
-            <div class="move-list-container">
-                <div id="moveList" class="move-list"></div>
+            <div class="right-panel">
+                <div class="move-list-container">
+                    <div id="moveList" class="move-list"></div>
+                </div>
                 <div class="movegen-container">
                     <label for="movegenSelect">Move Generator:</label>
                     <div class="movegen-controls">
