--- a/static_resources/index.html
+++ b/static_resources/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Chess Engine</title>
+    <link rel="icon" href="data:image/png;base64,iVBORw0KGgo=">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -42,6 +43,40 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="instructions-box">
+        <h2>How to Play</h2>
+        <p>
+            • Drag and drop pieces on the board to make your move.<br>
+            • Press Get to let the engine calculate its move.<br>
+            • The Move Generator dropdown lets you choose different move-generation strategies.<br>
+            • Captured pieces appear in the bar below the board.<br>
+            • Press Reset at any time to start a new game.
+        </p>
+        <h2>What is this?</h2>
+        <p>
+            This is chess. It is a project I made because I've always
+            enjoyed chess and always been interested in implementing
+            different strategies.
+            <br>
+            The frontend interface is written with HTML, CSS and
+            JavaScript, but the engine and move generator is written in
+            C. Currently this is compiled into WebAssembly with
+            emscripten. The benefits of that is because it can be done
+            locally, meaning no expensive backend load, but I plan to
+            add a game mode to have the chess engine run on a server,
+            and the javascript communicate through a REST API to the
+            chess engine. The engine being written in C means that
+            compiling into a native binary will be easier than rewriting
+            the engine and maintains the (potential) high efficiency of
+            C programs.
+            <br>
+            In fact, the engine is currently compiled into a native
+            dynamic library for the unit tests. See
+            <a href=/coverage/>here</a> for the coverage results of the
+            unit tests.
+        </p>
     </div>
 
     <script type="module" src="app.js" type="text/javascript"></script>
